# TastyTrade

./: .pre-commit-config.yaml  README.md  pyproject.toml
webapp/frontend/: api.py  app.py  pyproject.toml
webapp/frontend/option_analytics/: package-lock.json  package.json
webapp/frontend/option_analytics/public/: index.html
webapp/frontend/option_analytics/src/: App.js
webapp/frontend/option_analytics/src/components/: DataTable.jsx  ExpirySelector.jsx  SymbolSelector.jsx
webapp/frontend/option_analytics/src/containers/: SelectorContainer.jsx
webapp/frontend/pages/: futures.py  home.py  list.py  option_chain.py  options.py  search.py
webapp/middleware/: .pre-commit-config.yaml  main.py  pyproject.toml
webapp/middleware/config/: database.py  logging.py  settings.py
webapp/middleware/controllers/: authController.py  equitiesController.py  fetchController.py  futuresController.py  optionChainController.py  optionChainsController.py  optionController.py  optionsController.py  pnfController.py  stockController.py
webapp/middleware/dependencies/: injectors.py
webapp/middleware/repositories/: fetchRepository.py  optionChainStreamerRepository.py
webapp/middleware/serializers/: authSerializer.py  fetchSerializer.py
webapp/middleware/services/: authService.py  equitiesService.py  fetchService.py  futuresService.py  optionChainsService.py  optionsService.py  pnfService.py  stockService.py
webapp/middleware/streamers/: optionChainStreamer.py
webapp/middleware/utils/: common.py  optionChainMetrics.py  repository.py
