[project]
name = "frontend"
version = "0.1.0"
description = "This is a probabilistic Frontend service for TastyTrade that delivers data-driven insights on trades using advanced statistical formulas. It analyzes real-time market data to provide probability-based opinions, helping traders make more informed decisions with greater confidence and precision."
authors = [
    {name = "tushar choudhary",email = "tusharchoudhary8051@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.47.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

